--- a/styles.css
+++ b/styles.css
@@ -467,6 +467,21 @@ button:hover {
 
 /* Media query for mobile screens */
 @media screen and (max-width: 768px) {
+    #lichess-playing-card {
+        background-color: #1C1C1C;
+        /* Dark grey background */
+        /* padding: 20px; */
+        /* margin: 20px 0; */
+        width: 95%;
+        border: 1px solid #E0E0E0;
+        /* Light grey border */
+        border-radius: 8px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        color: #FFFFFF;
+        position: relative;
+        /* Ensure the block is the reference point for positioning */
+    }
+
     .lichess-content {
         flex-direction: column;
         /* Stack elements vertically */
@@ -838,7 +853,7 @@ footer ul li a:hover {
     }
 
     main {
-        padding: 10px;
+        padding: 20px;
     }
 
     .block {
